fix alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -70,7 +70,7 @@ a:hover {
 .skill-row {
   width: 50%;
   margin: 100px auto;
-  text-align: left;
+  text-align: center;
   line-height: 2;
 }
 
